--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ body{
 }
 .slider-item-img{
     transition: 0.7s;
-    background:#a87bae;
+    background:#ffb996e5 ;
 border-radius: 0px 0px 0px 0px;
     padding: 10px;
     border-bottom: 1px solid #333;
@@ -364,6 +364,8 @@ border-radius: 0px 0px 0px 0px;
     list-style: none;
     padding: 0;
     margin: 0;
+
+
     display: block;
     gap: 15px; 
 
@@ -384,12 +386,11 @@ border-radius: 0px 0px 0px 0px;
 .with-links{
     display: flex;
     flex-direction: column;
-    align-items: flex-end; 
+   align-items: flex-end;
     justify-content: space-between; 
     text-align: start;
     width: 100%;
-
-    
+    transform: translateX(50px);
 }
 
 
@@ -402,6 +403,7 @@ border-radius: 0px 0px 0px 0px;
     margin-right: 10px; /* Adds space between icon and text */
     color: #fff; /* Icon color */
 }
+
 
 .follow-box-copyright li a:hover i,
 .follow-box-contact li a:hover i {
@@ -421,7 +423,12 @@ footer a:hover {
     text-decoration: underline;
     color: #007bff; /* Changes link color on hover */
 }
-
+.secondone{
+    transform: translateX(-20%);
+}
+.firstone{
+    transform: translateX(20%);
+}
 @media (max-width: 768px) {
     .follow-box, .flo-box {
         text-align: center; /* Center align on smaller screens */
@@ -429,6 +436,10 @@ footer a:hover {
 
     .flo-box {
         margin-top: 20px; /* Adds space between follow and contact sections on small screens */
+    }
+    .with-links{
+        align-items: center; 
+        transform: translateX(0px);
     }
    
     
