--- a/dashboard/assets/css/argon-dashboard.css
+++ b/dashboard/assets/css/argon-dashboard.css
@@ -100,6 +100,7 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+
 hr {
   margin: 1rem 0;
   color: inherit;
@@ -4611,6 +4612,10 @@ fieldset:disabled .btn {
 .nav-pills .show>.nav-link {
   color: var(--bs-nav-pills-link-active-color);
   background-color: var(--bs-nav-pills-link-active-bg);
+  cursor: default;
+}
+.nav-link:hover{
+  background: #c9c9c9;
 }
 
 .nav-fill>.nav-link,
